resolve: keep updated TestCoverageAnalyzerTest (stash version)